tests/ui/unsized-locals/issue-67981.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/issue-67981.rs:4:24
   |
LL |     let f: fn([u8]) = |_| {};
   |                        ^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all function arguments must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
